css/dashboard.css
.rewards_icon{
  width: 24px;
}

#leaderboard ul{
  list-style: none;
}

.card {
  background-color: rgb(255, 255, 255, 0.8);
  padding: 24px;
  border-radius: 8px;
  margin: 12px 0px;
  box-shadow: 0px 0px 40px -10px rgba(86, 108, 81, 0.9);
}

#donut-balance-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 3rem 1rem 3rem 1rem;
  margin-bottom: 3rem;
}


#donut-balance-and-icon{
  margin-bottom: 1rem;
  margin-right: auto;
  margin-left: auto;

}

#donut-balance-and-icon img{
  margin-right: 1rem;
}

#total-donations{
  text-align: center;
  padding: 3rem 1rem 3rem 1rem;
  margin-bottom: 3rem;
}

#donut-balance-and-icon{
  display: flex;
  justify-content: space-between;
}

#leaderboard{
  padding: 3rem 1rem 3rem 1rem;
  margin-bottom: 3rem;
}

#total-donations h3{
  margin-bottom: 1rem;
}

#leaderboard h4{
  text-align: center;
  margin-bottom: 1rem;
}

.leaderboard_num{
  display: flex;
  justify-content: space-between;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

ul{
  padding: 1rem;
}

